# stock_analysis_tool

./: README.md  TOOL_NAMING.md  pyproject.toml
src/: __init__.py  server.py
src/ashare_mcp_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/tools/: __init__.py  akshare_indicators.py  analysis.py  corrected_akshare.py  data_validation.py  market_data.py  market_data_simple.py  news.py  professional_analysis.py  technical_indicators.py  tushare_client.py
src/utils/: __init__.py  analysis_rules.py  formatters.py
tests/: test_analysis.py  test_market_data.py
