[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-mcp-agent"
version = "0.1.0"
description = "MCP Server for Chinese A-share market analysis"
authors = [{name = "OpenClaw Agent", email = "agent@openclaw.ai"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "akshare>=1.15.0",
    "tushare>=1.4.0",
    "pandas>=2.0.0",
    "ta-lib>=0.6.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"ashare_mcp_agent" = "src"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true